<resources>
    <string name="app_name">paTest</string>

    <!-- DialogUtils-->
    <string name="dlg_ok">OK</string>
    <string name="dlg_cancel">Cancel</string>
    <string name="please_wait">Please wait…</string>

    <!-- activity_sign_in-->
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="err_invalid_login">Invalid login</string>
    <string name="err_invalid_password">Invalid password</string>

    <!-- activity_sign_up-->
    <string name="repeat_password">Repeat Password</string>
    <string name="next">Next</string>
    <string name="err_password_dont_match">Password don\'t appear to match</string>
    <string name="complete">Complete</string>

    <!-- activity_update_user-->
    <string name="field_password">Password</string>
    <string name="field_email">Email</string>
    <string name="field_fullname">Full Name</string>
    <string name="field_phone">Phone</string>
    <string name="field_web_site">Web Site</string>
    <string name="update">Update</string>

    <!-- fragment_sign_up_avatar-->
    <string name="add_photo">Add photo</string>
    <string name="add_photo_description">Select the source.</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="choose_from_gallery">Choose from Gallery</string>
    <string name="err_image_not_found">Need to add a image before proceed</string>
    <string name="success_user_signup">Success SignUp</string>
    <string name="success_user_updated">Success Update</string>
    <string name="success_avatar_updated">Success Avatar Update</string>

</resources>
